--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 
+
+
 #title1{
     font-size: 7em;
     color: white;
@@ -16,13 +18,37 @@
 
 .top{
     height: 75vh;
+    width: 75%;
+    border: 2px solid black;
+    /* display: flex; */
+    
+}
+
+hr{
+    background-color: white;
+    border: 1px solid white;
+}
+
+.within{
+    /* grid-area: main; */
+    border: 1px solid red;
+    float:right;
+    /* height: 100%; */
+
+}
+
+.bottom{
+    margin: 20px;
+    border: 1px solid gold;
 }
 
 span{
-    color: white;
-    overflow: hidden;
-    margin: 0 auto;
+    color: black;
+    /* overflow: hidden; */
+    margin: 20px;
 }
+
+
 
 
 
@@ -37,6 +63,8 @@ span{
 	        animation: slide-in-right 8s linear both;
 } */
 
+
+
 .slide-in-right {
 	animation: slide-in-right 6.5s linear both;
     
@@ -48,9 +76,14 @@ span{
     
 }
 
-.typing-effect{
-    animation: typing  4s steps(44) 1s 1 normal both,
+.slide-in-bottom {
+	animation: slide-in-bottom 3s linear both;
 }
+
+.typing-effect{
+    animation: typing 1s steps(1) infinite;
+}
+
 
 
 
@@ -70,13 +103,38 @@ span{
  */
 @keyframes slide-in-right {
   0% {
-    transform: translateX(1300px);
+    transform: translateX(900px);
     max-height: 100%;
-    /* opacity: 0; */
+    opacity: 3%;
+  }
+  15%{
+      opacity: 30%
+  }
+  25% {
+      opacity: 60%;
+  }
+  40%{
+      opacity: 100%
   }
   100% {
     transform: translateX(-1000px);
     max-height: 0;
+    /* opacity: 100%; */
+  }
+}
+ /* ----------------------------------------
+ animation slide-in-bottom
+ ---------------------------------------- */
+ 
+@keyframes slide-in-bottom {
+  0% {
+    transform: translateY(-20px);
+    height: 0%;
+    /* opacity: 0; */
+  }
+  100% {
+    transform: translateY(-300px);
+    height: 100%;
     /* opacity: 1; */
   }
 }
@@ -115,7 +173,10 @@ background: -moz-linear-gradient(90deg, hsla(54, 100%, 80%, 1) 0%, hsla(69, 80%,
 
 /* background: -webkit-linear-gradient(90deg, hsla(54, 100%, 80%, 1) 0%, hsla(69, 80%, 80%, 1) 25%, hsla(203, 88%, 80%, 1) 50%, hsla(250, 69%, 80%, 1) 75%, hsla(347, 92%, 80%, 1) 100%); */
     font-family: 'Space Mono', monospace;
-};
+    height: 100vh;
+}
+
+
 
 
 
