--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,7 +134,7 @@ span{
   }
   100% {
     transform: translateY(-300px);
-    height: 100%;
+    height: 150%;
     /* opacity: 1; */
   }
 }
@@ -173,7 +173,13 @@ background: -moz-linear-gradient(90deg, hsla(54, 100%, 80%, 1) 0%, hsla(69, 80%,
 
 /* background: -webkit-linear-gradient(90deg, hsla(54, 100%, 80%, 1) 0%, hsla(69, 80%, 80%, 1) 25%, hsla(203, 88%, 80%, 1) 50%, hsla(250, 69%, 80%, 1) 75%, hsla(347, 92%, 80%, 1) 100%); */
     font-family: 'Space Mono', monospace;
-    height: 100vh;
+    min-height: 100%;
+    min-width: ;
+    overflow: hidden;
+}
+
+html{
+    height: 100%;
 }
 
 
