--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,13 @@
     </div>
 
     <div class="bottom">
-        <span class="typing-effect">Write a sentence:</span>
+        <p id="instructions" class="typing-effect">Write a sentence:</p>
         <input type="text" id="clearText">
         <input type="submit" value="Cipher Up" id="submit">
         <button id="reset" onclick="reset()">Reset</button>
-        <p id="codedText"></p>
+
     </div>
+    <p id="codedText"></p>
 
     <script src="/js/script.js"></script>
 </body>
