Working on bottom div

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
     <div class="bottom">
         <p id="instructions" class="typing-effect">Write a sentence:</p>
-        <input type="text" id="clearText">
+        <input type="text" id="clearText" autofocus>
         <input type="submit" value="Cipher Up" id="submit">
         <button id="reset" onclick="reset()">Reset</button>
 
@@ -33,6 +33,6 @@
     <p id="codedText"></p>
 
     <script src="/js/script.js"></script>
-</body>
+</body onload="focusInput()">
 
 </html>
