--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@
 }
 
 .top{
-    height: 75vh;
+    height: 70vh;
     width: 70%;
     /* border: 2px solid black; */
     /* display: flex; */
@@ -39,7 +39,7 @@ hr{
 }
 
 .bottom{
-    margin: 20px 15px 20px 40px;
+    margin: 0px 15px 20px 40px;
     border: 1px solid gold;
     width: 65%;
     display: flex;
@@ -48,23 +48,40 @@ hr{
     align-items: center;
 }
 
+
 #instructions{
     color: black;
     /* overflow: hidden; */
-    margin: 20px 0px 20px 15px;
+    margin: 0px 0px 20px 15px;
     /* padding-left: 25px; */
     
     display: flex;
     /* flex-wrap: nowrap; */
-    flex-grow: .4;
-    
-    align-self:center;
+    flex-grow: .5;
+    justify-content: center;
+    /* align-self:center; */
     /* margin: 0px; */
 }
 
 #clearText{
-    margin: 15px;
+    margin: 0px 15px 15px 0px;
+    background-color: transparent;
+    border-bottom: 2px solid white;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    cursor: text;
+    height: 2em;
+    width: 20em;
+    outline: none !important;
+    font-size: 1em;
+    font-family: 'Space Mono', monospace;
+    caret-color: white;
+    color: white;
+    font-weight: 700;
+    
 }
+
 
 
 
