--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
     </div>
 
     <div class="bottom">
-        <p id="instructions" class="typing-effect">Write a sentence:</p>
+        <p id="instructions" class="typing-effect"><strong>W</strong>rite a sentence:</p>
         <input type="text" id="clearText" autofocus>
         <input type="submit" value="Cipher Up" id="submit">
         <button id="reset" onclick="reset()">Reset</button>
