--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,15 +17,19 @@
 
 <body>
     <div id="right">
-        <p>Coded Text</p>
-        <p id="codedText"></p>
+        <section class="vertical-line slide-in-bottom"></section>
+        <div>
+            <p id="right-cypher-title">Cypher Text</p>
+            <p id="codedText"></p>
+        </div>
+
     </div>
     <div id="left">
         <div class="top">
             <!-- <h1 id="title1" class="slide-in-right"> Simple Basic Cipher</h1> -->
             <h1 id="title2" class="slide-in-left"> Simple Basic Cipher</h1>
             <hr class="slide-in-left" />
-            <section class="within slide-in-bottom"></section>
+
         </div>
         <div class="bottom">
             <!-- <section class="bottom-line">|</section> -->
